Modified some text to em sizes to prevent overflow on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: #d9dcd6;
+    /* font-size: ; */
 }
 
 header {
@@ -13,6 +14,7 @@ header {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    /* font-size: 125%; */
 }
 
 header h1 {
@@ -26,10 +28,10 @@ header h1 .seo {
 
 header nav {
     padding-top: 15px;
-    margin-right: 20px;
+    margin-right: 10px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+    font-size: 1.2em;
 }
 
 header nav ul {
@@ -46,16 +48,21 @@ header nav ul li a {
     text-decoration: none;
 }
 
-p {
-    font-size: 16px;
+.service p {
+    font-size: 1em;
 }
 
 .hero {
+    /* max-height: 800px;  */
+    /* min-height: 600px ; */
+    /* max-height: 800px ; */
     height: 800px;
+    /* /min-width: ; */
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
+    /* resize: vertical; */
     background-position: center;
 }
 
@@ -71,71 +78,45 @@ p {
 
 .content {
     display: inline-block;
+    /* margin: 0 10px; */
     width: 75%;
-    margin-left: 20px;
-    /* margin-right: 10px; */
-    /* width: 1024px; */
-    /* overflow: hidden; */
-
-    /* overflow-y: hidden; */
+    /* margi */
+    margin-left:0px;
+    margin-right:10px;
 } 
 .services {     
-    /* width: 75%;  */
-    width: 75%;
-    /* min-width: 60%; */
-    display: inline-block; 
     margin-left: 0px;
-    margin-right: 20px;
+    margin-right: 10px;
 
 }
 .service {
-    /* display: inline-block; */
-    /* display: :in; */
-    /* display: inline-block; */
-    /* overflow: hidden; */
-    /* overflow: visible; */
     margin-bottom: 20px;
-    
     padding: 50px;
-    /* min-height: 250px; */
-    min-height: 300px;
-    width: 100%;
-
+    height: 300px;
+    width: 100%; 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
-.service-blurb {
-    /* margin: ; */
-    overflow: hidden; 
-    max-width: 300px;
-    min-width: 250px;
-    /* width: 250px; */
-
-}
-.service-blurb h2{
-    margin-bottom: 20px;
-    font-size: 36px;
+.service h2{
+    margin-bottom: 10px;
+    font-size: 2.25em;
 }
 
 .benefits {
     margin-right: 20px;
     padding: 20px;
+    width: 20%;
     clear: both;
     float: right;
-    text-align: center;
-    /* overflow: scroll; */
-    width: 20%;
-    /* max-width: 20%; */
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* 
 .service p {
     font-size: 16px;
-    line-height: 1.3;
-  }
+  } */
 .service img {
     max-height: 200px;
     /* margin-bottom: ; */
@@ -143,23 +124,23 @@ p {
 
 .benefit {
     margin-bottom: 32px;
-    overflow: auto;
-    color: white
+    color: white;
+    text-align: center;
+
+    /* text-align: center; */
 }
 .benefit h3 {
-    font-size: 24px;
+    font-size: 2em;
     margin-bottom: 10px;
-    text-align: center;
 }
 .benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-.benefit p {
+/* .benefit p {
     font-size: 16px;
-    line-height: 120%;
-}
+} */
 
 /* section#search-engine-optimization {
     margin-bottom: 20px;
